{
  "version": 4,
  "terraform_version": "1.16.2",
  "serial": 16,
  "lineage": "0063dc81-7a3f-f3a2-4074-cd56a22d4845",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fef201115eefe936",
            "arn": "arn:aws:ec2:us-east-1:314445553481:instance/i-0231f1f3a0f7264fe",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0231f1f3a0f7264fe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a7aacb8650f5b2fc"
              }
            ],
            "primary_network_interface_id": "eni-0a7aacb8650f5b2fc",
            "private_dns": "ip-10-0-0-42.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.42",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f296c7aa4b999f5d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f81d47d88fb773b9",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c5b815ee56e4449"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "314445553481",
            "id": "i-0231f1f3a0f7264fe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.my-sg",
            "aws_subnet.pvt-subnet-1",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314445553481:internet-gateway/igw-0e9947569ad40e2d7",
            "id": "igw-0e9947569ad40e2d7",
            "owner_id": "314445553481",
            "region": "us-east-1",
            "tags": {
              "name": "my-custom-igw"
            },
            "tags_all": {
              "name": "my-custom-igw"
            },
            "vpc_id": "vpc-0c6ada9d5852e2fc2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "314445553481",
            "id": "igw-0e9947569ad40e2d7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314445553481:route-table/rtb-06c9e24d918d45e86",
            "id": "rtb-06c9e24d918d45e86",
            "owner_id": "314445553481",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9947569ad40e2d7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "my-custom-route-table"
            },
            "tags_all": {
              "name": "my-custom-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6ada9d5852e2fc2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "314445553481",
            "id": "rtb-06c9e24d918d45e86",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314445553481:route-table/rtb-0ca5a00257cd3fd6c",
            "id": "rtb-0ca5a00257cd3fd6c",
            "owner_id": "314445553481",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "name": "my-pvt-rt"
            },
            "tags_all": {
              "name": "my-pvt-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6ada9d5852e2fc2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "314445553481",
            "id": "rtb-0ca5a00257cd3fd6c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "custom-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc83686b82c7f200",
            "region": "us-east-1",
            "route_table_id": "rtb-06c9e24d918d45e86",
            "subnet_id": "subnet-0f81d47d88fb773b9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "314445553481",
            "id": "rtbassoc-0bc83686b82c7f200",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.custom-route-table",
            "aws_subnet.pvt-subnet-1",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314445553481:security-group/sg-05c5b815ee56e4449",
            "description": " allow ssh and http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c5b815ee56e4449",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "http",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-security-group",
            "name_prefix": "",
            "owner_id": "314445553481",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c6ada9d5852e2fc2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "314445553481",
            "id": "sg-05c5b815ee56e4449",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314445553481:subnet/subnet-0f81d47d88fb773b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f81d47d88fb773b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "314445553481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "name": "custom-subnet-1"
            },
            "tags_all": {
              "name": "custom-subnet-1"
            },
            "vpc_id": "vpc-0c6ada9d5852e2fc2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "314445553481",
            "id": "subnet-0f81d47d88fb773b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314445553481:vpc/vpc-0c6ada9d5852e2fc2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07f047f3872725cc7",
            "default_route_table_id": "rtb-0030f51f0cf014d18",
            "default_security_group_id": "sg-086f0fe8fd4c2b3c4",
            "dhcp_options_id": "dopt-03de8cb5b0881efd2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c6ada9d5852e2fc2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0030f51f0cf014d18",
            "owner_id": "314445553481",
            "region": "us-east-1",
            "tags": {
              "name": "my-vpc"
            },
            "tags_all": {
              "name": "my-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "314445553481",
            "id": "vpc-0c6ada9d5852e2fc2",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}